# odoo-filter-addons

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish-test.yml
odoo_filter_addons/: __init__.py  main.py  version.py
